sumo/tests/traci/ChangeTarget/InvalidNodeId/testclient_out.traci
TraCITestClient output file. Date: Tue Feb 03 22:52:44 2009


-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=2508.05 y=491.75

-> Command sent: <ChangeTarget>:
  NodeId=1 RoadId=e_m6
.. Answered with error to command (49), [description: Can not retrieve node with given ID]

-> Command sent: <SimulationStep>:
  TargetTime=1 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1 2D-Position: x=2508.5 y=491.75

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
